поправить ошибку автотеста SleepingSessionReaderTest